--- a/app/src/main/res/layout-w936dp/activity_login.xml
+++ b/app/src/main/res/layout-w936dp/activity_login.xml
@@ -27,7 +27,7 @@
             android:id="@+id/signInTitle"
             android:gravity="center_horizontal"
             android:fontFamily="@font/poppins_semibold"
-            android:textSize="20sp"
+            android:textSize="26sp"
             android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -118,20 +118,20 @@
 
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/btn_new_account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="100dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:fontFamily="@font/poppins"
-            android:text="@string/createNewAccountLabel"
-            android:textColor="#FFF"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.979"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/btn_new_account"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginEnd="100dp"-->
+        <!--            android:layout_marginStart="8dp"-->
+        <!--            android:layout_marginTop="32dp"-->
+        <!--            android:fontFamily="@font/poppins"-->
+        <!--            android:text="@string/createNewAccountLabel"-->
+        <!--            android:textColor="#FFF"-->
+        <!--            android:textSize="20sp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintHorizontal_bias="0.979"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
