--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ui.dashboard.DashboardActivity"
+    android:background="@color/white"
+    android:backgroundTint="@color/white">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dashboard Screen (Coming Soon)"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:textSize="20sp"
+        android:textColor="@color/blackPrimary"
+        android:fontFamily="@font/poppins_bold">
+    </TextView>
+</LinearLayout>
